<resources>
    <string name="app_name">Pareja_Ramirez_Victor_Datos</string>
    <!--MAIN ACTIVITY STRINGS-->
    <string name="buttonActivityOne">Ejercicio 1</string>
    <string name="buttonActivityTwo">Ejercicio 2</string>
    <string name="buttonActivityThree">Ejercicio 3</string>
    <string name="buttonActivityFour">Ejercicio 4</string>

    <!--EJERCICIO 2 STRINGS-->
    <string name="textViewTime">Tiempo: </string>
    <string name="textViewDescription">Descripción: </string>
    <string name="textViewSound">Sonido: </string>
    <string name="buttonSave">Guardar</string>
    <string name="buttonClean">Borrar</string>
    <string name="buttonFinish">Finalizar</string>
    <string name="butttonBack">Volver</string>
    <string name="textViewRemainAlarms">Alarmas restantes: </string>
    <string name="textViewSetFileName">Nombre del archivo: </string>
    <string name="textViewSetSound">Sonido activado:  </string>

    <!-- EJERCICIO 3 STRINGS -->
    <string name="textViewName">Nombre: </string>
    <string name="textViewLink">Link: </string>
    <string name="textViewEmail">Email: </string>
    <string name="textViewCategory">Categoría: </string>
    <string name="textViewImage">Imagen: </string>
    <string name="textViewSelectImage">Seleccionar</string>
    <string name="textViewTitleAdd">Añadir una nueva web</string>
    <string name="textViewTitleMod">Modificar una nueva web</string>
    <string name="buttonCancel">Cancelar</string>
    <string name="buttonCreate">Crear</string>


</resources>